fix: adjust news-heading alignment

--- a/newsAPI/src/components/view/news/news.css
+++ b/newsAPI/src/components/view/news/news.css
@@ -22,6 +22,7 @@
     width: fit-content;
     margin-left: auto;
     margin-right: auto;
+    text-align: center;
 }
 
 .news__item {
